
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int atoi (char*) ;
 int csv_classifier (char*,char*,char*) ;
 int demo_classifier (char*,char*,char*,int,char*) ;
 int file_output_classifier (char*,char*,char*,char*) ;
 int find_arg (int,char**,char*) ;
 char* find_char_arg (int,char**,char*,int ) ;
 int find_int_arg (int,char**,char*,int ) ;
 int fprintf (int ,char*,char*,char*) ;
 int gpu_index ;
 int gun_classifier (char*,char*,char*,int,char*) ;
 int label_classifier (char*,char*,char*) ;
 int predict_classifier (char*,char*,char*,char*,int) ;
 int* read_intlist (char*,int*,int ) ;
 int stderr ;
 scalar_t__ strcmp (char*,char*) ;
 int test_classifier (char*,char*,char*,int) ;
 int threat_classifier (char*,char*,char*,int,char*) ;
 int train_classifier (char*,char*,char*,int*,int,int) ;
 int try_classifier (char*,char*,char*,char*,int) ;
 int validate_classifier_10 (char*,char*,char*) ;
 int validate_classifier_crop (char*,char*,char*) ;
 int validate_classifier_full (char*,char*,char*) ;
 int validate_classifier_multi (char*,char*,char*) ;
 int validate_classifier_single (char*,char*,char*) ;

void run_classifier(int argc, char **argv)
{
    if(argc < 4){
        fprintf(stderr, "usage: %s %s [train/test/valid] [cfg] [weights (optional)]\n", argv[0], argv[1]);
        return;
    }

    char *gpu_list = find_char_arg(argc, argv, "-gpus", 0);
    int ngpus;
    int *gpus = read_intlist(gpu_list, &ngpus, gpu_index);


    int cam_index = find_int_arg(argc, argv, "-c", 0);
    int top = find_int_arg(argc, argv, "-t", 0);
    int clear = find_arg(argc, argv, "-clear");
    char *data = argv[3];
    char *cfg = argv[4];
    char *weights = (argc > 5) ? argv[5] : 0;
    char *filename = (argc > 6) ? argv[6]: 0;
    char *layer_s = (argc > 7) ? argv[7]: 0;
    int layer = layer_s ? atoi(layer_s) : -1;
    if(0==strcmp(argv[2], "predict")) predict_classifier(data, cfg, weights, filename, top);
    else if(0==strcmp(argv[2], "fout")) file_output_classifier(data, cfg, weights, filename);
    else if(0==strcmp(argv[2], "try")) try_classifier(data, cfg, weights, filename, atoi(layer_s));
    else if(0==strcmp(argv[2], "train")) train_classifier(data, cfg, weights, gpus, ngpus, clear);
    else if(0==strcmp(argv[2], "demo")) demo_classifier(data, cfg, weights, cam_index, filename);
    else if(0==strcmp(argv[2], "gun")) gun_classifier(data, cfg, weights, cam_index, filename);
    else if(0==strcmp(argv[2], "threat")) threat_classifier(data, cfg, weights, cam_index, filename);
    else if(0==strcmp(argv[2], "test")) test_classifier(data, cfg, weights, layer);
    else if(0==strcmp(argv[2], "csv")) csv_classifier(data, cfg, weights);
    else if(0==strcmp(argv[2], "label")) label_classifier(data, cfg, weights);
    else if(0==strcmp(argv[2], "valid")) validate_classifier_single(data, cfg, weights);
    else if(0==strcmp(argv[2], "validmulti")) validate_classifier_multi(data, cfg, weights);
    else if(0==strcmp(argv[2], "valid10")) validate_classifier_10(data, cfg, weights);
    else if(0==strcmp(argv[2], "validcrop")) validate_classifier_crop(data, cfg, weights);
    else if(0==strcmp(argv[2], "validfull")) validate_classifier_full(data, cfg, weights);
}
